2003-06-24 David Malcolm <david@davemalcolm.demon.co.uk>

	* Makefile.am, main.c

	Changed executable from "conge" to "conglomerate"

	* cong-dispspec.[ch], cong-plugin.[ch], global.h

	Added plugin node property dialogs

	* cong-document.c

	Allow views only to to bother handling the signals they care about

	* cong-menus.c

	Added a Glade test to the hidden debug menus

	* cong-node-properties.c

	Big rewrite, allowing for plugin property dialogs, and for attribute renaming.

	* cong-view.c

	Fixed a warning

	* cong-view.h

	Added some documentation

	* plugin-docbook.c

	Added custom DocBook properties dialog.

	* tree.c

	Made the node properties dialogs modeless.
	
2003-06-13 David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-section-head-editor.c

	Fix for warnings, plus an early initialisation of pango_layout text, suggested by Julian Satchell <j.satchell@eris.qinetiq.com>
	
	* Makefile.am

	Added cong-node-properties-dialog.c

	* cong-debug-log-view.c, cong-document.c, cong-document.h, cong-dom-view.c, cong-editor-widget.c, cong-menus.c, cong-node-properties-dialog.c, cong-source-view.c, cong-tree-view.c, cong-view.h, global.h, 

	Added attribute display to some views, and messages relating to attributes to the MVC framework; editing functionality in the node properties dialog.

	* cong-dispspec.c, cong-file-new.c, cong-plugin.c, cong-plugin.h, main.c, plugin-docbook.c, plugin-tests.c, 

	Generalisation of icon support; plugin factories can now have icons displayed in the File->New assistant

	* cong-node.h, select.c, tree.c, xmldata.c, xmledit.c

	Ensure that new nodes have the xml_doc set up correctly (fixes some DTD problems)

	* cursor.c

	Fix for bug #114960

	* plugin-validate.c

	Bug now listed as bug #113758

	* popup.c

	Fixed a bug where removing a span tag didn't trigger an MVC update
	
2003-06-10 David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec.c

	Generalisations to the icon loading.
	